@@ -688,7 +688,10 @@ CONFIG_MTD_CFI_I2=y
 CONFIG_MTD_RALINK=y
 CONFIG_MTD_SPI_RALINK=y
 # CONFIG_MTD_SPI_FAST_CLOCK is not set
-CONFIG_MTD_SPI_DUAL_READ=y
+# CONFIG_MTD_SPI_READ_NORM is not set
+# CONFIG_MTD_SPI_READ_FAST is not set
+CONFIG_MTD_SPI_READ_DOR=y
+# CONFIG_MTD_SPI_READ_DIOR is not set
 # CONFIG_MTD_NAND_RALINK is not set
 CONFIG_RT2880_FLASH_4M=y
 # CONFIG_RT2880_FLASH_8M is not set
