@@ -353,6 +353,7 @@
 28) kernel: enchane sections speed hack(fastpathsys ~2% cpu free).<br>
 29) kernel: ipv4: Make IP_MULTICAST_ALL and IP_MSFILTER work on raw sockets.<br>
 40) kernel: apply optimize_mips_memcpy_memset_cache.<br>
+41) kernel: ralink spi: allow set FAST/DOR/DIOR from kernel config, support DOR on Macronix chips.<br>
 <br>
 <br>
 <b>TODO:</b><br>
